# cpp-lab-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  compose.yml  entrypoint.sh
.github/workflows/: ci.yml
cmake/: run_clang_tidy.sh.in
src/: CMakeLists.txt
src/01-primeiros-passos/dados-pessoais/: main.cpp
src/01-primeiros-passos/mensagem-boas-vindas/: main.cpp
src/01-primeiros-passos/ola-mundo/: main.cpp
src/01-primeiros-passos/padrao-asteriscos/: main.cpp
src/02-variaveis-tipos/conversao-temperatura/: main.cpp
src/02-variaveis-tipos/conversao-tipos/: main.cpp
src/02-variaveis-tipos/divisao-inteira-vs-float/: main.cpp
src/02-variaveis-tipos/operador-modulo/: main.cpp
src/02-variaveis-tipos/soma-dois-numeros/: main.cpp
src/03-estruturas-condicionais/aprovado-reprovado/: main.cpp
src/03-estruturas-condicionais/maior-de-tres/: main.cpp
src/03-estruturas-condicionais/par-ou-impar/: main.cpp
src/03-estruturas-condicionais/positivo-negativo-zero/: main.cpp
src/03-estruturas-condicionais/verifica-idade/: main.cpp
src/04-lacos-repeticao/contagem-um-a-dez/: main.cpp
src/04-lacos-repeticao/soma-pares/: main.cpp
src/05-funcoes/funcao-dobro/: main.cpp
src/05-funcoes/funcao-positivo/: main.cpp
src/06-arrays-vetores/array-inverso/: main.cpp
src/06-arrays-vetores/busca-elemento/: main.cpp
src/06-arrays-vetores/media-array/: main.cpp
src/06-arrays-vetores/soma-diagonal/: main.cpp
src/07-strings/comprimento-string/: main.cpp
src/07-strings/concatena-strings/: main.cpp
src/07-strings/conta-vogais/: main.cpp
src/07-strings/verifica-palindromo/: main.cpp
src/08-classes-objetos/classe-aluno/: main.cpp
src/08-classes-objetos/classe-conta-bancaria/: main.cpp
src/08-classes-objetos/classe-pessoa/: main.cpp
src/08-classes-objetos/classe-retangulo/: main.cpp
tests/: CMakeLists.txt
tests/01-primeiros-passos/: test_dados_pessoais.cpp  test_mensagem_boas_vindas.cpp  test_ola_mundo.cpp  test_padrao_asteriscos.cpp
tests/02-variaveis-tipos/: test_conversao_temperatura.cpp  test_conversao_tipos.cpp  test_divisao_inteira_vs_float.cpp  test_operador_modulo.cpp  test_soma_dois_numeros.cpp
tests/03-estruturas-condicionais/: test_aprovado_reprovado.cpp  test_maior_de_tres.cpp  test_par_ou_impar.cpp  test_positivo_negativo_zero.cpp  test_verifica_idade.cpp
tests/04-lacos-repeticao/: test_contagem_um_a_dez.cpp  test_soma_pares.cpp
tests/05-funcoes/: test_funcao_dobro.cpp  test_funcao_positivo.cpp
tests/06-arrays-vetores/: test_array_inverso.cpp  test_busca_elemento.cpp  test_media_array.cpp  test_soma_diagonal.cpp
tests/07-strings/: test_comprimento_string.cpp  test_concatena_strings.cpp  test_conta_vogais.cpp  test_verifica_palindromo.cpp
tests/08-classes-objetos/: test_classe_aluno.cpp  test_classe_conta_bancaria.cpp  test_classe_pessoa.cpp  test_classe_retangulo.cpp
tests/helpers/: file_descriptor.hpp  pipe.hpp  subprocess.cpp  subprocess.hpp
